<resources>
    <string name="app_name">DispositivosMovilesM</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Clave</string>

    <string name="msg_nombre">Nombre del Lugar</string>
    <string name="msg_correo">Email (correo@xxx.xxx)</string>
    <string name="msg_telefono">Teléfono (9999–9999)</string>
    <string name="msg_web">Sitio Web</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="bt_add_lugar">Agregar Lugar</string>
    <string name="bt_update_lugar">Actualizar Lugar</string>
    <string name="bt_delete_lugar">Eliminar Lugar</string>
    <string name="msg_lugar_added">Lugar agregado…</string>
    <string name="msg_lugar_updated">Lugar actualizado…</string>
    <string name="msg_data">Faltan Datos!</string>
    <string name="todo">To do</string>
    <string name="msg_imagen">imagen de lugar</string>
    <string name="msgEscucharAudio">Play audio</string>
    <string name="msgInicioNotaAudio">Inicio de nota</string>
    <string name="msgDetieneNotaAudio">Fin de nota</string>
    <string name="msgGuardandoLugar">Subiendo los archivos</string>

</resources>