<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="ui.home.ActualizarLugarFragment">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_correo_lugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_correo"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_telefono"
        android:inputType="phone"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_web"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/bt_update_lugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_update_lugar" />

    <Button
        android:id="@+id/btn_eliminar_lugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_delete_lugar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/bt_play"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/msgEscucharAudio"
            android:src="@drawable/ic_play" />


    </LinearLayout>

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:contentDescription="@string/msg_imagen"
        android:scaleType="centerInside"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/backgrounds/scenic" />

</LinearLayout>